# rust-cleanup

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  config.example.toml  dist-workspace.toml  rustfmt.toml
.claude/skills/run-rustsweep/: SKILL.md  smoke.sh
.github/workflows/: ci.yml  docs.yml
docs/: book.toml
docs/man/: rustsweep.1
docs/src/: SUMMARY.md  cli-reference.md  configuration.md  faq.md  filters.md  how-it-decides.md  ignore-patterns.md  installation.md  introduction.md  quick-start.md
notes/: config-file-plan.md  docs-and-release-plan.md  review-handoff.md  stages-0-2-handoff.md
src/: clean.rs  cli.rs  config.rs  discover.rs  ignore.rs  lib.rs  main.rs  plan.rs  util.rs
tests/: docs.rs  integration.rs
