[package]
name = "rust-cleanup"
version = "0.1.2"
edition = "2024"

[[bin]]
name = "rust-cleanup"
test = false
bench = false

[dependencies]
clap = { version = "4", features = ["derive"] }
cargo_metadata = "0.23.1"
indicatif = "0.18.6"
rayon = "1.12.0"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
