[package]
name = "rustsweep"
version = "0.1.4"
edition = "2024"
description = "Frees disk space by cleaning the build artifacts of every Rust project under a directory, including the stray build dirs `cargo clean` can't reach."
repository = "https://github.com/rootschafer/rustsweep"
homepage = "https://github.com/rootschafer/rustsweep"
# Matches LICENSE.txt (MIT only).
license = "MIT"
readme = "README.md"
keywords = ["cargo", "clean", "disk-space", "target", "cli"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
exclude = ["notes/", "config.example.toml"]

[[bin]]
name = "rustsweep"
test = false
bench = false

[dependencies]
clap = { version = "4", features = ["derive"] }
cargo_metadata = "0.23.1"
indicatif = "0.18.6"
rayon = "1.12.0"
serde = { version = "1", features = ["derive"] }
# toml = "1.1.3+spec-1.1.0"
toml = "1"
globset = "0.4.19"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
