[package]
name = "rustsweep"
version = "0.1.4"
edition = "2024"
description = "Frees disk space by cleaning the build artifacts of every Rust project under a directory, including the stray build dirs `cargo clean` can't reach."
repository = "https://github.com/rootschafer/rustsweep"
homepage = "https://github.com/rootschafer/rustsweep"
# Matches LICENSE.txt (MIT only).
license = "MIT"
readme = "README.md"
keywords = ["cargo", "clean", "disk-space", "target", "cli"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
# The book and its generated artifacts are for the website and the release
# archives; nothing here is needed to build the crate. dist reads docs/man out
# of the git checkout, not the packaged tarball, so excluding it is safe.
# tests/docs.rs goes with docs/: it diffs the checked-in copies against the clap
# definitions, so shipping it without its inputs would give a packaged crate a
# test that cannot pass.
exclude = ["notes/", "docs/", "tests/docs.rs", "config.example.toml"]

[[bin]]
name = "rustsweep"
test = false
bench = false

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }
cargo_metadata = "0.23.1"
indicatif = "0.18.6"
rayon = "1.12.0"
serde = { version = "1", features = ["derive"] }
# toml = "1.1.3+spec-1.1.0"
toml = "1"
globset = "0.4.19"
clap_complete = "4"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
clap_mangen = "0.3"
clap-markdown = "0.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
